css/newproject.css
body, html {
    margin: 0;
    padding: 0;
  
}

.main {
	background-color: #18587C;
    padding-bottom: 20px;
}

img {
    border:none;
}

@font-face {
    font-family: 'montserratregular';
    src: url('fonts/Montserrat-Regular-webfont.eot');
    src: url('fonts/Montserrat-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/Montserrat-Regular-webfont.woff') format('woff'),
         url('fonts/Montserrat-Regular-webfont.ttf') format('truetype'),
         url('fonts/Montserrat-Regular-webfont.svg#montserratregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'montserratbold';
    src: url('Montserrat-Bold-webfont.eot');
    src: url('Montserrat-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('Montserrat-Bold-webfont.woff') format('woff'),
         url('Montserrat-Bold-webfont.ttf') format('truetype'),
         url('Montserrat-Bold-webfont.svg#montserratbold') format('svg');
    font-weight: normal;
    font-style: normal;

}

#right {
    margin: 0;
}

#right_container {
    width: 799px;
    padding-bottom: 5px;
}

#global_error {
    padding-bottom: 0;
}


/* HEADER */

.header {
    background: #0A263D;
    height: 75px;
    text-align: center;
    -webkit-box-shadow: 0px 4px 3px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    0px 4px 3px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         0px 4px 3px 0px rgba(50, 50, 50, 0.2);
    width:100%;
    position: relative;
    top:0px;
    z-index: 1;
    
}

.header h1 {
    margin: 0;
    line-height: 75px;
    color: #FFF;
    font-size: 26px;
    font-family: 'montserratregular', sans-serif;
    
}

.header div {
    display: inline-block;
    vertical-align: middle;
}

.back {
    position: absolute;
    top: 28px;
    left: 20px;
}

.back img, p {
    display: inline-block;
    vertical-align: middle;
}

.back p {
    color: #FFF;
    font-family: 'montserratregular', sans-serif;
    font-size: 14px;
    padding: 0 15px;
    margin: 0;
}




/* THUMBNAIL */

.main {
    padding-top: 20px;
    z-index: 2;
}


.thumbnail {
    width: 225px;
    height: 225px;
    background: rgba(255,255,255,.3);
    margin: 0 0 0 20px;
    position: relative;
    -webkit-box-shadow: 3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    float:left;
}

.thumbnail_title {
    width: 100%;
    text-align: center;
    position: absolute;
    bottom: 0;
    background: rgba(2,20,38, .8);
}

.thumbnail_title h3 {
    font-family: 'montserratregular', sans-serif;
    font-size: 15px;
    color: #fff;
    margin:0;
    padding: 20px 0px;
}

.thumbnail .dropImg {
    position: absolute;
    top: 10px;
    left: 38px;
    background: transparent;
    font-family: 'montserratregular', sans-serif;
    font-size: 20px;
    color: #fff;
}

.thumbnail h5 {
    position: absolute;
    top: 35px;
    left: 107.5px;
    font-size: 15px;
    background: transparent;
    font-family: 'montserratregular', sans-serif;
    color: #fff;
}

.thumbnail .clickAdd {
    position: absolute;
    bottom: 65px;
    left: 51px;
    background: transparent;
    font-family: 'montserratregular', sans-serif;
    font-size: 20px;
    color: #fff;
}
  
.form-group-file {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    width: 225px;
    height: 245px;
}

.form-group-file input {
    width: 225px !important;
    height: 245px !important;
    opacity: 0 !important;
    cursor: pointer;
}

/* FORM LAYOUT */

.project_information {
    float:left;
    margin: 0 20px 0 20px;
}

#name {
    width: 470px;
    font-family: 'montserratregular', sans-serif;
    font-size: 20px;
    background: rgba(255,255,255, 0.3);
    color: #FFF;
    box-shadow: none;
    border:none;
    padding: 20px;
    margin: 0 0 20px 20px;
    -webkit-box-shadow: 3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         3px 3px 3px 0px rgba(50, 50, 50, 0.2);
}

#description {
    width: 470px;
    height: 140px;
    font-family: 'montserratregular', sans-serif;
    font-size: 16px;
    background: rgba(255,255,255, 0.3);
    color: #FFF;
    box-shadow: none;
    border:none;
    padding: 20px 20px 20px 20px;
    margin: 0 0 20px 20px;
    -webkit-box-shadow: 3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         3px 3px 3px 0px rgba(50, 50, 50, 0.2);
}

textarea {
    resize: none;
}

::-webkit-input-placeholder { /* WebKit browsers */
    color:    #FFF;
    top: 0;
}

:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color:    #FFF;
   opacity:  1;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
   color:    #FFF;
   opacity:  1;
}

#name:focus, #description:focus {
    outline: none !important;
    border: inset 2px solid rgba(255,255,255, .5);
    box-shadow: inset 0px 0 5px #FFF;
}

#submit {
     width: 470px;
    font-family: 'montserratregular', sans-serif;
    font-size: 20px;
    text-align: center;
    background: #3EB9FD;
    color: #FFF;
    box-shadow: none;
    border:none;
    padding: 20px;
    margin: 0 50px 0 268px;
    -webkit-box-shadow: 3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    -moz-box-shadow:    3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    box-shadow:         3px 3px 3px 0px rgba(50, 50, 50, 0.2);
    cursor: pointer;
}

